@@ -23,7 +23,7 @@ Hello_asm/Sender_comp/src and invoke the TAO IDL compiler by running the
 following command: </P>
 <P><CODE>tao_idl 
 -I../../ports -I../../GeneratedCode -I%TAO_ROOT% -I%TAO_ROOT%/tao -I%CIAO_ROOT% 
--I%CIAO_ROOT%/ccm -I%CIAO_ROOT%/ciao -Gex Hello_Senmder_comp.idl</CODE></P>
+-I%CIAO_ROOT%/ccm -I%CIAO_ROOT%/ciao -Gex Hello_Sender_comp.idl</CODE></P>
 <FONT face="Times New Roman">An example of the generated code can be found
 <A href="Code/GeneratedExec/Hello_Sender_comp_exec.cpp">here</A>. An
 example of the implemented executor can be found
@@ -37,7 +37,7 @@ directory. A copy of the implemented executor can be found
 by running the following command: </P>
 <P><CODE class=western>tao_idl -I../../ports -I../../GeneratedCode -I%TAO_ROOT% 
 -I%TAO_ROOT%/tao -I%CIAO_ROOT% -I%CIAO_ROOT%/ccm -I%CIAO_ROOT%/ciao -Gex 
-Hello_Receiver_comp.idl.<BR></CODE></p>
+Hello_Receiver_comp.idl<BR></CODE></p>
 An example of the generated code can be found <A href="Code/GeneratedExec/Hello_Receiver_comp_exec.cpp">here</A>.
 An example of the implemented executor can be found <A href="Code/ImplementedExec/Hello_Receiver_comp_exec.cpp">here</A>.<BR>
 Be aware that running this command, 
