@@ -1,3 +1,11 @@
+Wed Apr 25 12:02:03 UTC 2012  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * connectors/ami4ccm/tutorials/Hello/Tutorial/03_executors.html:
+        Fixed typo.
+        * connectors/dds4ccm/tutorials/Shapes/Tutorial/03_executors.html:
+        Added include of dds4ccm/idl dir with -Gex command 
+
+
 Thu Apr 19 07:48:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
